--- a/index.html
+++ b/index.html
@@ -3,49 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Visualization Interface</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your custom CSS file -->
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Visualization Interface</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Excel & CSV File Reader</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
 <body>
+    <h1>Upload Excel or CSV File</h1>
+    <input type="file" id="file-input" />
+    <button onclick="handleFile()">Read File</button>
 
-    <!-- Main container -->
-    <div class="container">
-        <!-- Header Section -->
-        <header class="text-center my-4">
-            <h1>Upload Your Data for Visualization</h1>
-            <p>Upload a CSV or Excel file to generate visualizations.</p>
-        </header>
+    <h2>Data Preview:</h2>
+    <pre id="output"></pre>
 
-        <!-- File Upload Section -->
-        <section id="upload-section" class="my-4">
-            <form id="upload-form" enctype="multipart/form-data">
-                <div class="mb-3">
-                    <input type="file" id="file-input" class="form-control" accept=".csv, .xlsx" />
-                </div>
-                <button type="submit" class="btn btn-primary">Upload File</button>
-            </form>
-        </section>
-
-        <!-- Visualization Section -->
-        <section id="visualization-section" class="my-4">
-            <h2>Generated Visualizations</h2>
-            <!-- Placeholder for charts or other visualizations -->
-            <div id="chart-container">
-                <canvas id="chart" width="400" height="200"></canvas>
-            </div>
-        </section>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="script.js"></script> <!-- Link to your custom JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
