--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <header class="header">
             <div class="logo">DataViz</div>
             <div class="header-options">
-                <button class="option-btn">File</button>
-                <button class="option-btn">Settings</button>
+                <button class="option-btn" onclick="toggleMode()">Toggle Mode</button>
             </div>
         </header>
 
@@ -25,7 +24,6 @@
                 <div class="nav-item">Home</div>
                 <div class="nav-item">Upload File</div>
                 <div class="nav-item">Visualize</div>
-                <div class="nav-item">Settings</div>
             </aside>
 
             <div class="content">
@@ -38,6 +36,17 @@
                     <h2>Select Attributes to Visualize:</h2>
                     <div id="attributes"></div>
                     <button onclick="generateChart()" class="upload-btn">Generate Visualization</button>
+                    <div>
+                        <label for="bar-color">Bar Color: </label>
+                        <input type="color" id="bar-color" value="#4e8dff">
+                    </div>
+                    <div>
+                        <label for="line-color">Line Color: </label>
+                        <input type="color" id="line-color" value="#ff6347">
+                    </div>
+                    <div>
+                        <button id="download-btn" class="upload-btn">Download Chart as PNG</button>
+                    </div>
                 </section>
 
                 <section class="chart-section">
@@ -48,7 +57,7 @@
         </div>
 
         <footer class="footer">
-            <p>Made with ❤️ by Your Name</p>
+            <p>Data Vizualisation</p>
         </footer>
     </div>
 
